still need to learn inline and block

--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,3 +1,8 @@
+div {
+  margin: 8px;
+  padding: 8px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
@@ -6,22 +11,38 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin:16px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size:16px;
+  padding-left:8px;
+  padding-right:8px;
+  padding-top:8px;
+  padding-bottom:8px;
+  margin:8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding-top:16px;
+  padding-bottom:16px;
+  padding-left: 8px;
+  padding-right:8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align:center;
+  padding:8px;
 }
 
-button {
+.button {
   background: white;
   border: 1px solid #eee;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-left: 24px;
+  margin-right: 24px;
 }
