--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,12 +6,28 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+}
+
+.purple {
+  display:flex;
+}
+
+.logo, .links {
+  display:flex;
+  gap:16px;
+  margin:auto;
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content:center;
+  flex-flow: row nowrap;
 }
 
 .profile-image {
@@ -27,6 +43,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  
 }
 
 button {
@@ -45,4 +62,5 @@ a {
 
 ul {
   list-style-type: none;
+  
 }
